# build-to-learn

./: .gitignore  README.md
gacha-data-platform/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
gacha-data-platform/chat/: README.md
gacha-data-platform/dashboard/: evidence.config.yaml
gacha-data-platform/dashboard/pages/: characters.md  index.md  luck.md  spending.md
gacha-data-platform/generator/: README.md  bulk_seed.py  db.py  economy.py  gacha.py  models.py  players.py
gacha-data-platform/infra/: README.md
gacha-data-platform/medallion/: .user.yml  README.md  dbt_project.yml  profiles.yml
gacha-data-platform/medallion/seeds/: banners.csv  characters.csv  seeds.yml
gacha-data-platform/pipeline/: README.md  bigquery.py  core.py  options.py  schemas.py  transforms.py  warehouse.py
gacha-data-platform/pipeline/debezium/: application.properties
gacha-data-platform/scripts/: init-bigquery.py  init-pubsub.sh  reconcile.py
gacha-data-platform/seed/: characters.json  generate_portraits.py  schema.sql
gacha-data-platform/tests/: test_gacha.py  test_transforms.py
gacha-data-platform/ui/: README.md  main.py
pydantic-ai/sql-safety-assistant/: README.md  db.py  pyproject.toml  shared.py
pydantic-ai/sql-safety-assistant/level-0-vanilla-di/: main.py
pydantic-ai/sql-safety-assistant/level-1-basic-di/: main.py
pydantic-ai/sql-safety-assistant/level-2-deferred-tools/: main.py
pydantic-ai/sql-safety-assistant/level-3-cost-guardrail/: main.py
pydantic-ai/sql-safety-assistant/level-4-fastapi/: README.md  main.py  store.py
(+97 files in other folders)
